fixed styling of too small lists

--- a/src/app/styles/page.module.css
+++ b/src/app/styles/page.module.css
@@ -1,4 +1,5 @@
 .mainWatchlistContent {
+    display: block;
     max-width: 1000px;
     margin: 0 auto 50px auto;
 }
@@ -32,7 +33,6 @@
 
 .watchlistItems {
     max-width: 800px;
-    height: 50px;
     margin: auto;
 }
 
